--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         function loginWithGoogle() {
            // Redirect the user to Google's authentication page
             var clientId = '418780961475-rtdgptamomr1eosu0el37gblhv08hllv.apps.googleusercontent.com';
-            var redirectUri = 'file:///C:/Users/admin/Documents/Final/car_price_predictor-master/brocker/Home.html'; // This should be a URL on your website where Google will redirect after authentication
+            var redirectUri = 'https://milind848.github.io/car_price_prediction/Home.html'; // This should be a URL on your website where Google will redirect after authentication
             var scope = 'email profile'; // Define the scope of access required by your application
 
             var authUrl = 'https://accounts.google.com/o/oauth2/auth?' +
