--- a/Home.html
+++ b/Home.html
@@ -7,10 +7,10 @@
 
 <!-- onclick="playCarRacingSound()"> -->
         <!-- Embedding the car racing sound -->
-     <audio id="carRacingSound" controls>
+<!--      <audio id="carRacingSound" controls>
         <source src="formula_1.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
-    </audio>
+    </audio> -->
         <nav>
             <a href="#home" ><li class="nav_li">Home</li></a>
             <a href="#predict" ><li class="nav_li">Predict</li></a>
