--- a/Br.html
+++ b/Br.html
@@ -33,7 +33,7 @@
                     <br>
 
                     <div class="oneline">
-                        <a href="" class="connect">
+                        <a href="9764605632" class="connect">
                             <img src="phonetel.png" class="img1" alt=""><label class="cont">CALL ME</label>
                         </a>
                         
@@ -56,7 +56,7 @@
                     <br>
 
                     <div class="oneline">
-                        <a href="" class="connect">
+                        <a href="7264084859" class="connect">
                     
                             <img src="phonetel.png" class="img1" alt=""><label class="cont">CALL ME</label>
                         </a>
